syntax = "proto3";

package com.academy.fintech.create;

option java_multiple_files = true;

service CreateService {
  rpc create (CreateRequest) returns (CreateResponse);
}

message CreateRequest {
  string clientId = 1;
  int32 loanTerm = 2;
  string disbursementAmount = 3;
  string originationAmount = 4;
  string interest = 5;
  string productCode = 6;
}

message CreateResponse {
  oneof response {
    string agreementId = 1;
    string errorMessage = 2;
  }
}